add swagger docs for statistics video apis, statistics live apis
