# dto/statistics.go
@@ -63,7 +63,7 @@ type LiveCurrentViewers struct {
 }
 
 type StatisticsQuery struct {
-	SortBy  string `query:"sort_by" validate:"omitempty,oneof=title created_at views likes comments video_size duration stream_id id"`
+	SortBy  string ` json:"sort_by" query:"sort_by" validate:"omitempty,oneof=title created_at views likes comments video_size duration stream_id id"`
 	Sort    string `query:"sort" validate:"omitempty,oneof=DESC ASC"`
 	From    int64  `query:"from" validate:"omitempty"`
 	To      int64  `query:"to" validate:"omitempty"`
@@ -77,15 +77,15 @@ type StatisticsStreamInDayQuery struct {
 }
 
 type LiveStreamBroadCastQueryDTO struct {
-	SortBy          string               `query:"sort_by" validate:"omitempty,oneof=title started_at ended_at views likes comments video_size duration created_at"`
+	SortBy          string               `json:"sort_by" query:"sort_by" validate:"omitempty,oneof=title started_at ended_at views likes comments video_size duration created_at"`
 	Sort            string               `query:"sort" validate:"omitempty,oneof=DESC ASC"`
 	Status          []model.StreamStatus `query:"status" validate:"omitempty"`
 	Type            model.StreamType     `query:"type" validate:"omitempty,oneof=camera software"`
 	Category        string               `query:"category" validate:"omitempty"`
-	FromStartedTime int64                `query:"from_started_time" validate:"omitempty"`
-	EndStartedTime  int64                `query:"end_started_time" validate:"omitempty"`
-	FromEndedTime   int64                `query:"from_ended_time" validate:"omitempty"`
-	EndEndedTime    int64                `query:"end_ended_time" validate:"omitempty"`
+	FromStartedTime int64                `json:"from_started_time" query:"from_started_time" validate:"omitempty"`
+	EndStartedTime  int64                `json:"end_started_time" query:"end_started_time" validate:"omitempty"`
+	FromEndedTime   int64                `json:"from_ended_time" query:"from_ended_time" validate:"omitempty"`
+	EndEndedTime    int64                `json:"end_ended_time" query:"end_ended_time" validate:"omitempty"`
 	Keyword         string               `query:"keyword" validate:"omitempty"`
 	Page            uint                 `query:"page" validate:"required,min=1"`
 	Limit           uint                 `query:"limit" validate:"required,min=1,max=20"`
